[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/HUD/DateCounter.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/HUD/BurnRate.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/HUD/Header.gd" type="Script" id=3]
[ext_resource path="res://Scenes/HUD/PhaseHUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/HUD/Money.tscn" type="PackedScene" id=5]
[ext_resource path="res://Themes/main_theme.tres" type="Theme" id=6]
[ext_resource path="res://Scenes/HUD/Money.gd" type="Script" id=7]
[ext_resource path="res://Scenes/HUD/DateCounter.gd" type="Script" id=8]

[node name="Header" type="PanelContainer"]
anchor_right = 1.0
margin_bottom = 80.0
theme = ExtResource( 6 )
script = ExtResource( 3 )

[node name="MoneySystem" type="Node" parent="."]
script = ExtResource( 7 )

[node name="HudLeft" type="HBoxContainer" parent="."]
margin_right = 640.0
margin_bottom = 80.0
custom_constants/separation = 0

[node name="DateCounter" parent="HudLeft" instance=ExtResource( 1 )]
script = ExtResource( 8 )

[node name="Money" parent="HudLeft" instance=ExtResource( 5 )]
margin_left = 100.0
margin_right = 200.0
rect_min_size = Vector2( 100, 80 )

[node name="BurnRate" parent="HudLeft" instance=ExtResource( 2 )]
margin_left = 200.0
margin_right = 300.0
rect_min_size = Vector2( 100, 80 )

[node name="HudRight" type="HBoxContainer" parent="."]
margin_right = 640.0
margin_bottom = 80.0
custom_constants/separation = 0
alignment = 2

[node name="PhaseHUD" parent="HudRight" instance=ExtResource( 4 )]
margin_left = 336.0
margin_right = 576.0
margin_bottom = 80.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="EmptySpace" type="CenterContainer" parent="HudRight"]
margin_left = 576.0
margin_right = 640.0
margin_bottom = 80.0
rect_min_size = Vector2( 64, 0 )
